--- a/templates/admin/movies.html
+++ b/templates/admin/movies.html
@@ -2,7 +2,7 @@
 
 {% block title %}Manage Movies - Admin{% endblock %}
 
-{% block head %}
+{% block extra_head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
 {% endblock %}
 
