--- a/templates/payment_instructions.html
+++ b/templates/payment_instructions.html
@@ -30,7 +30,7 @@
             <div class="step">
                 <div class="step-number">3</div>
                 <div class="step-content">
-                    <h3>Return to MovieHub</h3>
+                    <h3>Return to MovieNight</h3>
                     <p>After payment, click the button below to complete your booking</p>
                 </div>
             </div>
