--- a/templates/admin/theaters.html
+++ b/templates/admin/theaters.html
@@ -2,6 +2,10 @@
 
 {% block title %}Manage Theaters - Admin{% endblock %}
 
+{% block extra_head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <div class="admin-container">
@@ -15,7 +19,7 @@
                     <i class="fas fa-plus"></i>
                     Add New Theater
                 </button>
-                <a href="{{ url_for('admin_dashboard') }}" class="btn btn-outline">
+                <a href="{{ url_for('admin.admin_dashboard') }}" class="btn btn-outline">
                     <i class="fas fa-arrow-left"></i>
                     Back to Dashboard
                 </a>
@@ -90,7 +94,7 @@
             <span class="close" onclick="closeModal('addTheaterModal')">&times;</span>
         </div>
         
-        <form action="{{ url_for('add_theater') }}" method="POST" class="modal-form">
+        <form action="{{ url_for('admin.add_theater') }}" method="POST" class="modal-form">
             <div class="form-group">
                 <label for="name">
                     <i class="fas fa-building"></i>
