--- a/templates/booking_success.html
+++ b/templates/booking_success.html
@@ -18,7 +18,7 @@
                 <div class="ticket-header">
                     <div class="ticket-logo">
                         <i class="fas fa-film"></i>
-                        <span>MovieHub</span>
+                        <span>MovieNight</span>
                     </div>
                     <div class="booking-id">
                         <strong>Booking ID: #{{ booking.id }}</strong>
