--- a/templates/booking_success.html
+++ b/templates/booking_success.html
@@ -157,7 +157,7 @@
                 <i class="fas fa-download"></i>
                 Download PDF
             </button>
-            <a href="{{ url_for('home') }}" class="btn btn-secondary">
+            <a href="{{ url_for('main.index') }}" class="btn btn-secondary">
                 <i class="fas fa-home"></i>
                 Back to Home
             </a>
