--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 MovieNight. Crafted with ❤️</p>
+                <p>&copy; 2025 MovieNight. Crafted with love</p>
             </div>
         </div>
     </footer>
