--- a/templates/error.html
+++ b/templates/error.html
@@ -17,7 +17,7 @@
             </div>
             
             <div class="error-actions">
-                <a href="{{ url_for('home') }}" class="btn btn-primary hover-glow">
+                <a href="{{ url_for('main.index') }}" class="btn btn-primary hover-glow">
                     🏠 Go Home
                 </a>
                 
