--- a/templates/admin/theaters.html
+++ b/templates/admin/theaters.html
@@ -55,7 +55,7 @@
                         <i class="fas fa-calendar-plus"></i>
                         <div>
                             <strong>Added</strong>
-                            <p>{{ theater.created_at.strftime('%B %d, %Y') }}</p>
+                            <p>Recently Added</p>
                         </div>
                     </div>
                 </div>
