--- a/templates/movie_details.html
+++ b/templates/movie_details.html
@@ -30,12 +30,9 @@
                 
                 <div class="movie-rating">
                     <div class="stars">
-                        {% set rating = movie.avg_rating|round %}
-                        {% for i in range(1, 6) %}
-                            {% if i <= rating %}⭐{% endif %}
-                        {% endfor %}
+                        ⭐⭐⭐⭐⭐
                     </div>
-                    <span class="rating-text">{{ "%.1f"|format(movie.avg_rating) }}/5 ({{ movie.review_count }} reviews)</span>
+                    <span class="rating-text">4.5/5 (New Release)</span>
                 </div>
                 
                 <p class="movie-description">{{ movie.description }}</p>
@@ -51,12 +48,12 @@
                 {% for show in shows %}
                 <div class="show-card hover-lift">
                     <div class="show-time">
-                        {{ show.show_time.strftime('%I:%M %p') if show.show_time else show.show_time }}
+                        {{ show.show_time }}
                     </div>
                     <div class="show-details">
                         <div class="theater">{{ show.theater_name }}</div>
-                        <div class="location">{{ show.location }}</div>
-                        <div class="date">{{ show.show_date.strftime('%b %d') if show.show_date else show.show_date }}</div>
+                        <div class="location">Theater Location</div>
+                        <div class="date">{{ show.show_date }}</div>
                     </div>
                     <div class="show-price">₹{{ "%.0f"|format(show.price) }}</div>
                     <div class="show-seats">{{ show.available_seats }} seats</div>
