Implement food ordering feature with menu display, booking integration, and database support; refactor booking process to include food items

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,3 +86,4 @@
     {% block scripts %}{% endblock %}
 </body>
 </html>
+                <li><a href=\"/food-menu\" class=\"nav-link\">\ud83c\udf7f Food Menu</a></li>
